[gd_scene load_steps=12 format=3 uid="uid://dtuka8skjku64"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_2lwtp"]
[ext_resource type="Texture2D" uid="uid://wg0ippwfbgil" path="res://assets/enemy_saucer.png" id="1_35hcn"]
[ext_resource type="PackedScene" uid="uid://oq84xjh7bnpq" path="res://bullet/enemy_bullet.tscn" id="2_lkn03"]
[ext_resource type="PackedScene" uid="uid://fl5ohv34he1a" path="res://enemy_paths/enemy_paths.tscn" id="2_o6x5p"]
[ext_resource type="PackedScene" uid="uid://d2ureu03siua3" path="res://explosion/explosion.tscn" id="4_hqf5o"]
[ext_resource type="AudioStream" uid="uid://ctpltea75flhf" path="res://assets/sounds/enemy_laser.wav" id="6_8bkd6"]
[ext_resource type="AudioStream" uid="uid://bsooh8mdwnygi" path="res://assets/sounds/explosion.wav" id="7_qoxym"]

[sub_resource type="CircleShape2D" id="CircleShape2D_velru"]
radius = 35.1283

[sub_resource type="Animation" id="Animation_gxcyp"]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.721569, 0, 0, 1), Color(1, 1, 1, 1), Color(0.721569, 0, 0, 1), Color(1, 1, 1, 1), Color(0.721569, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_01ltw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oheo2"]
_data = {
"RESET": SubResource("Animation_01ltw"),
"flash": SubResource("Animation_gxcyp")
}

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_2lwtp")
bullet_scene = ExtResource("2_lkn03")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_35hcn")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_velru")

[node name="EnemyPaths" parent="." instance=ExtResource("2_o6x5p")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oheo2")
}

[node name="Explosion" parent="." instance=ExtResource("4_hqf5o")]
visible = false

[node name="GunCooldownTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="LaserAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8bkd6")
volume_db = -15.0

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qoxym")
